Bugfix collapsed sidebar

--- a/www/themes/new/css/sidebar.css
+++ b/www/themes/new/css/sidebar.css
@@ -240,6 +240,9 @@
     margin-bottom: 50px;
     margin-left: -2px;
 }
+#sidebar.collapsed .sidebar-submenu div {
+    left: var(--sidebar-collapsed-width);
+}
 
 #sidebar .sidebar-submenu:before{
     position: absolute;
